# CSESA_Summer_Projects_2025

./: CMakeLists.txt  Makefile  README.md  gitignore  requirements.txt
Systems Programming/Project 5/: CMakeLists.txt  README.md  requirements.txt
Systems Programming/Project 5/include/: BranchPredictor.hpp  HazardDetection.hpp  Instruction.hpp  MIPS.hpp  Pipeline.hpp  alu.hpp  branch_predictor.hpp  instruction_decoder.hpp  mips_simulator.hpp
Systems Programming/Project 5/src/: BranchPredictor.cpp  HazardDetection.cpp  Instruction.cpp  MIPS.cpp  Pipeline.cpp  alu.cpp  branch_predictor.cpp  cli_interface.cpp  instruction_decoder.cpp  main.cpp  mips_simulator.cpp
Systems Programming/Project 5/web/: app.py
Systems Programming/Project 5/web/static/css/: styles.css
Systems Programming/Project 5/web/static/js/: simulator.js
Systems Programming/Project 5/web/templates/: documentation.html  index.html
